centred grid  - removed boxes

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 <body>
     <h1>Tic Tac Toe</h1>
     <div id="row-one" class="row">
-        <div id="one" class="slot"></div>
-        <div id="two" class="slot"></div>
-        <div id="three" class="slot"></div>
+        <div id="one" class="slot column-one"></div>
+        <div id="two" class="slot column-two"></div>
+        <div id="three" class="slot column-three"></div>
     </div>
     <div id="row-two" class="row">
-        <div id="four" class="slot"></div>
-        <div id="five" class="slot"></div>
-        <div id="six" class="slot"></div>
+        <div id="four" class="slot column-one"></div>
+        <div id="five" class="slot column-two"></div>
+        <div id="six" class="slot column-three"></div>
     </div>
     <div id="row-three" class="row">
-        <div id="seven" class="slot"></div>
-        <div id="eight" class="slot"></div>
-        <div id="nine" class="slot"></div>
+        <div id="seven" class="slot column-one"></div>
+        <div id="eight" class="slot column-two"></div>
+        <div id="nine" class="slot column-three"></div>
     </div>
 </body>
 </html>
