--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery.js"></script>
+    <script src="js/game.js"></script>
     <script src="js/home.js"></script>
 </head>
 <body>
