--- a/index.html
+++ b/index.html
@@ -26,5 +26,9 @@
         <div id="eight" class="slot column-two"></div>
         <div id="nine" class="slot column-three"></div>
     </div>
+
+    <div class="game-over">
+        <h2><span id='winner'>Player</span> Wins!</h2>
+    </div>
 </body>
 </html>
