--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic Tac Toe</title>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@800&display=swap" rel="stylesheet">
+    <title>Three in a row</title>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Orbitron:wght@800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery.js"></script>
     <script src="js/game.js"></script>
     <script src="js/home.js"></script>
 </head>
 <body>
-    <h1>Tic Tac Toe</h1>
+    <h1>Three in a row</h1>
     <div id="row-one" class="row">
         <div id="one" class="slot column-one"></div>
         <div id="two" class="slot column-two"></div>
@@ -29,7 +29,7 @@
     </div>
 
     <div class="game-over">
-        <h2><span id='winner'>Player</span> Wins!</h2>
+        <h2><span id='winner'>Player</span> wins!</h2>
     </div>
 </body>
 </html>
