added scoring mechanism

--- a/index.html
+++ b/index.html
@@ -31,5 +31,21 @@
     <div class="game-over">
         <h2><span id='winner'>Player</span> wins!</h2>
     </div>
+
+    <div id="winbox1">
+        <span id="p1-name" class="names">Player 1</span> Score
+        <br>
+        <span id="score1" class="scores">0</span>
+    </div>
+    <div id="winbox2">
+        <span id="p2-name" class="names">Player 2</span> Score
+        <br>
+        <span id="score2" class="scores">0</span>
+    </div>
+    <div id="winbox3">
+        <span class="names">Ties</span>
+        <br>
+        <span id="score3" class="scores">0</span>
+    </div>
 </body>
 </html>
