ai added with easy difficulty

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
             </div>
             <div id="difficulty">
                 <div class='opponent-options diff' id="easy">Easy</div>
-                <div class='opponent-options diff' id="medium">Medium</div>
-                <div class='opponent-options diff' id="hard">Hard</div>
+                <div class='opponent-options diff' id="medium">Medium (coming soon)</div>
+                <div class='opponent-options diff' id="hard">Hard (coming soon)</div>
             </div>
         </div>
     </div>
