--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div id="difficulty">
                 <div class='opponent-options diff' id="easy">Easy</div>
                 <div class='opponent-options diff' id="medium">Medium (coming soon)</div>
-                <div class='opponent-options diff' id="hard">Hard (coming soon)</div>
+                <div class='opponent-options diff' id="hard">Hard</div>
             </div>
         </div>
     </div>
