--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
             <div id="difficulty">
                 <div class='opponent-options diff' id="easy">Easy</div>
-                <div class='opponent-options diff' id="medium">Medium (coming soon)</div>
+                <div class='opponent-options diff' id="medium">Medium</div>
                 <div class='opponent-options diff' id="hard">Hard</div>
             </div>
         </div>
